assets/base.css
/* ... */
.button.epi-button {
  min-width: auto;
  min-height: auto;
  text-transform: uppercase;
  padding: .5rem 1rem
}

.product-card-tag {
  display: flex;
  justify-content: right;
  margin-top: 2rem;
  margin-right: 2.5rem;
  position: absolute;
  top: 0;
  right: 0;
  text-transform: uppercase;
  color: rgb(var(--color-epi-white));
  font-family: 'VTCDuBois-Bold', serif;
  font-size: 1.6rem;
}

.unclickable {
  pointer-events: none;
}

.epi-border-desktop-top::after,
.epi-border-desktop-right::after,
.epi-border-desktop-bottom::after,
.epi-border-desktop-left::after,
.epi-border-mobile-top::after,
.epi-border-mobile-right::after,
.epi-border-mobile-bottom::after,
.epi-border-mobile-left::after {
  z-index: 100;
}

